tests/neg-custom-args/captures/impurefuns.scala
def f(x: Object^): Any =
  val f: Int =>{x} Int = ???  // error // error // error
  f
